--- a/src/main/resources/assets/resonanttoolbox/lang/en_US.lang
+++ b/src/main/resources/assets/resonanttoolbox/lang/en_US.lang
@@ -6,9 +6,10 @@ itemGroup.ResonantToolboxTab=Resonant Toolbox
 
 item.MRE.name=Material Relocation Enforcer
 item.Sapphire_0.name=Sapphire
-item.Sapphire_1.name=Inbued Sapphire
+item.Sapphire_1.name=Resonating Sapphire
 item.Iron_Rod.name=Iron Rod
 item.Resonating_Engine.name=Resonating Engine
+item.Immortality_Engine.name=Immortality Engine
 
 //Blocks
 
