--- a/src/main/resources/assets/resonanttoolbox/lang/en_US.lang
+++ b/src/main/resources/assets/resonanttoolbox/lang/en_US.lang
@@ -14,3 +14,7 @@ item.Immortality_Engine.name=Immortality Engine
 //Blocks
 
 tile.Sapphire_Ore.name=Sapphire Ore
+
+//Potion
+
+potion.immortality=Immortality
