--- a/src/main/resources/assets/resonanttoolbox/lang/en_US.lang
+++ b/src/main/resources/assets/resonanttoolbox/lang/en_US.lang
@@ -12,6 +12,8 @@ item.Resonating_Engine.name=Resonating Engine
 item.Immortality_Engine.name=Immortality Engine
 item.InfinitySword.name=Infinity Sword
 item.SpaceTimeNebula.name=Space-Time Nebula
+item.EyeOfInfinity_0.name=Eye Of Infinity
+item.EyeOfInfinity_1.name=EyE OF InFInItY
 
 //Blocks
 
